Thu Jun 29 03:13:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Display an initial debugging message before starting a test run,
	  thus avoiding a mistaken complaint of a memory leak.

Thu Jun 29 03:06:12 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix typo causing nettests to fail: was trying to open network
	  databases as writable.

Thu Jun 29 02:44:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Protected output of debug messages with a mutex, so messages
	  aren't tangled up.  Added DEBUGLINE() macro, which displays a
	  message which has a line to itself, said line starting with an
	  indication of the thread the message comes from.  Could add
	  time message was generated as well.

	* Added APICALL debug message type, and made many of the API calls
	  produce messages of this type.  Task for tomorrow is to make
	  all api calls produce such messages, and fully display their
	  parameters, and return values.

Wed Jun 28 20:14:54 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make threadtest use a dlist file.

Wed Jun 28 17:58:50 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make testsuite's memory checking threadsafe.

Wed Jun 28 16:24:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix deadlock in da_database.cc.

Wed Jun 28 15:23:07 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed configure so that --enable-debug=full actually _does_ select
	  verbose output.

Wed Jun 28 12:24:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API addition - Add a OmEnquire::get_query() method, to retrieve the
	  query which was set.

Wed Jun 28 09:13:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add an OmLock, and sentries to the public methods in DADatabase.

	* Add "threadtest", a testsuite for checking thread safety.
          Currently has no (completed) tests.
